src/test/deca/context/valid/non_provided/method_call.deca
// Description:
//    Appel de méthode dans une classe, sans 
//    objet devant
//
// Resultats:
//    Ok
// 
// Historique:
//    cree le 21/01/2020

class A {
    protected int x;

    void setX(int x) {
        this.x = x;
    }

    int getY() {
        int x = 5;
        setX(x);

        return this.x;
    }
}